--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,5 @@
-remote_theme: just-the-docs/just-the-docs
+# remote_theme: just-the-docs/just-the-docs
+
+title: RCS UserSupport (public)
+
+tagline: collating bits and pieces for a more effective support to 21st century users
