website layout test_2

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,32 @@
-# remote_theme: just-the-docs/just-the-docs
+---
 
-title: RCS UserSupport (public)
+title: "RCS UserSupport (public)"
+tagline: "collating bits and pieces for a more effective support to 21st century users"  # subtitle
 
-tagline: collating bits and pieces for a more effective support to 21st century users
+# Set a path/url to a logo that will be displayed instead of the title
+logo: "/assets/images/IC_logo.svg"
+
+remote_theme: just-the-docs/just-the-docs
+
+# Enable or disable the site search
+# Supports true (default) or false
+## search_enabled: false
+
+
+# Heading anchor links appear on hover over h1-h6 tags in page content
+# allowing users to deep link to a particular heading on a page.
+# Supports true (default) or false
+## heading_anchors: false
+
+# Color scheme supports "light" (default) and "dark"
+## color_scheme: dark
+
+
+
+# refs:
+# https://github.com/pmarsceill/jtd-remote
+# https://just-the-docs.github.io/just-the-docs/
+# https://just-the-docs.github.io/just-the-docs/docs/configuration/
+
+# default includes:
+# https://jekyllrb.com/docs/includes/
