--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 ---
 remote_theme: just-the-docs/just-the-docs
 
-title: "RCS UserSupport (public)"
+title: "RCS User Support docs"
 
 tagline: "collating bits and pieces for a more effective support to 21st century users"  # subtitle
 
